cricket club logo+fb+blog icon+ login button image added, default page emptied, site master page under construction

--- a/WAPP/WAPP.vbproj
+++ b/WAPP/WAPP.vbproj
@@ -153,7 +153,6 @@
     <Content Include="Account\Register.aspx" />
     <Content Include="Account\RegisterExternalLogin.aspx" />
     <Content Include="Contact.aspx" />
-    <Content Include="Content\Site.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -209,8 +208,15 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="Images\accent.png" />
+    <Content Include="Images\background.png" />
     <Content Include="Images\bullet.png" />
+    <Content Include="Images\button-login.png" />
     <Content Include="Images\heroAccent.png" />
+    <Content Include="Images\icon-blog-hover-none.png" />
+    <Content Include="Images\icon-blog-hover.png" />
+    <Content Include="Images\icon-fb-hover-none.png" />
+    <Content Include="Images\icon-fb-hover.png" />
+    <Content Include="Images\logo-cricket.png" />
     <Content Include="Images\orderedList0.png" />
     <Content Include="Images\orderedList1.png" />
     <Content Include="Images\orderedList2.png" />
@@ -253,6 +259,7 @@
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Styles\style.css" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
   </ItemGroup>
