--- a/WAPP/Web.config
+++ b/WAPP/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WAPP-20130813154141;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-WAPP-20130813154141.mdf" />
+    <add name ="MyNewConnection" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\TP028543\Desktop\WAPP\WAPP\App_Data\MemberDB.mdf;Integrated Security=True"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" strict="false" explicit="true" targetFramework="4.5" />
