--- a/WAPP/Web.config
+++ b/WAPP/Web.config
@@ -12,7 +12,7 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WAPP-20130813154141;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-WAPP-20130813154141.mdf"
       providerName="System.Data.SqlClient" />
     <add name="MyNewConnection" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\TP028543\Desktop\WAPP\WAPP\App_Data\MemberDB.mdf;Integrated Security=True" />
-    <add name="TestConnection" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\MemberDB.mdf;Integrated Security=True"
+    <add name="MemberConnection" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\WAPP.mdf;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
